--- a/POS/POS.Web/Views/Cashier/List.cshtml
+++ b/POS/POS.Web/Views/Cashier/List.cshtml
@@ -2,8 +2,6 @@
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 <h3>Cashier List</h3>
 
 @if(TempData["Msg"] != null && !Convert.ToBoolean(TempData["IsError"]))
@@ -24,7 +22,7 @@ else if (TempData["Msg"] != null && Convert.ToBoolean(TempData["IsError"]))
         <thead>
             <tr>
                 <th scope="col">
-                    <a href="/StockItem/entry" class="btn add">
+                    <a href="/Cashier/entry" class="btn add">
                         <i class="fa fa-plus"></i>
                     </a>
                 </th>
