--- a/POS/POS.Web/Views/StockIncome/Edit.cshtml
+++ b/POS/POS.Web/Views/StockIncome/Edit.cshtml
@@ -72,12 +72,12 @@
     <div class="row-side">
         <div class="col-side">
             <label for="PRICE" class="form-label">Price</label>
-            <input type="number" class="form-control" name="PRICE" id="txtPrice" value="@Model.PRICE">
+            <input type="number" step="any" class="form-control" name="PRICE" id="txtPrice" value="@Model.PRICE">
         </div>
 
         <div class="col-side">
             <label for="QUANTITY" class="form-label">Quantity</label>
-            <input type="number" class="form-control" name="QUANTITY" id="txtQnty" value="@Model.QUANTITY">
+            <input type="number" step="any" class="form-control" name="QUANTITY" id="txtQnty" value="@Model.QUANTITY">
         </div>
     </div>
     <div class="row-bottom">
