--- a/POS/POS.Web/Views/StockIncome/Entry.cshtml
+++ b/POS/POS.Web/Views/StockIncome/Entry.cshtml
@@ -38,12 +38,12 @@
 <div class="row-side">
     <div class="col-side">
         <label for="PRICE" class="form-label">Price</label>
-        <input type="number" class="form-control" name="PRICE" id="txtPrice" value="0">
+        <input type="number" step="any" class="form-control" name="PRICE" id="txtPrice" value="0">
     </div>
         
     <div class="col-side">
         <label for="QUANTITY" class="form-label">Quantity</label>
-        <input type="number" class="form-control" name="QUANTITY" id="txtQnty" value="0">
+        <input type="number" step="any" class="form-control" name="QUANTITY" id="txtQnty" value="0">
     </div>
 </div>
 
