--- a/POS/POS.Web/Views/MemberDiscount/Entry.cshtml
+++ b/POS/POS.Web/Views/MemberDiscount/Entry.cshtml
@@ -38,11 +38,11 @@
 <div class="row-side">
     <div class="col-side">
         <label for="ORIGIN_PRICE" class="form-label">Original Price</label>
-        <input type="number" class="form-control" name="ORIGIN_PRICE" id="txtOrgPrice" value="0" readonly>
+        <input type="number" step="any" class="form-control" name="ORIGIN_PRICE" id="txtOrgPrice" value="0" readonly>
     </div>
     <div class="col-side">
         <label for="OFFER_PRICE" class="form-label">Offer Price</label>
-        <input type="number" class="form-control" name="OFFER_PRICE" id="txtOffPrice" value="0" readonly>
+        <input type="number" step="any" class="form-control" name="OFFER_PRICE" id="txtOffPrice" value="0" readonly>
     </div>
 </div>
 
@@ -60,11 +60,11 @@
 <div class="row-side">
     <div class="col-side">
         <label for="Disc_Amount" class="form-label">Discount Amount</label>
-        <input type="number" class="form-control" name="Disc_Amount" id="DiscAmt" value="0" readonly>
+        <input type="number" step="any" class="form-control" name="Disc_Amount" id="DiscAmt" value="0" readonly>
     </div>
     <div class="col-side">
         <label for="Disc_Percent" class="form-label">Discount Percent</label>
-        <input type="number" class="form-control" name="Disc_Percent" id="DiscPer" value="0" readonly>
+        <input type="number" step="any" class="form-control" name="Disc_Percent" id="DiscPer" value="0" readonly>
     </div>
 </div>
 
