--- a/POS/POS.Web/Views/SaleOrder/List.cshtml
+++ b/POS/POS.Web/Views/SaleOrder/List.cshtml
@@ -1,1 +1,84 @@
-﻿
+﻿<html>
+    <head>
+    <!-- Include jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+        <style>
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 999;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.6);
+        }
+
+        .modal-content {
+            background-color: #fff;
+            margin: 10% auto;
+            padding: 20px;
+            width: 60%;
+            max-width: 500px;
+            border-radius: 8px;
+            position: relative;
+            text-align: center;
+        }
+
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 28px;
+            font-weight: bold;
+            color: #aaa;
+            cursor: pointer;
+        }
+
+        .close:hover {
+            color: #000;
+        }
+
+        </style>
+    </head>
+    <body>
+        <!-- Image Div -->
+        <div id="imageDiv" style="width:200px;cursor:pointer;">
+            <img src="your-image.jpg" alt="Thumbnail" width="200" />
+        </div>
+
+        <!-- Popup Modal -->
+        <div id="popupModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>This is the popup content!</p>
+                <img src="your-image.jpg" alt="Full Image" style="width: 100%;" />
+            </div>
+        </div>
+
+    <script>
+
+        $(document).ready(function () {
+          // Show modal on click
+          $('#imageDiv').click(function () {
+            $('#popupModal').fadeIn();
+          });
+
+          // Close modal on click of close button
+          $('.close').click(function () {
+            $('#popupModal').fadeOut();
+          });
+
+          // Optional: close modal when clicking outside the modal content
+          $(window).click(function (e) {
+            if ($(e.target).is('#popupModal')) {
+              $('#popupModal').fadeOut();
+            }
+          });
+        });
+    </script>
+    </body>
+</html> 
+
